app/assets/stylesheets/app.css
/*
 * COLORS
 * https://coolors.co/ff7538-f3c853-c5e384-d7d7d5-528fb7-e6ecf0-f9f9f9-f1f1f1-d3d3d3
*/
:root {
  --blue-100: #CDE7F9;
  --blue-300: #9FCAF4;
  --blue-500: #4183C4;
  --blue-700: #1D5D9C;
  --blue-900: #084069;

  --black-100: #ADB5BD;
  --black-300: #868E96;
  --black-500: #495058;
  --black-700: #343A40;
  --black-900: #21252A;

  --grey-100: #F8F9FA;
  --grey-300: #F1F3F5;
  --grey-500: #EAEDEF;
  --grey-700: #DEE2E6;
  --grey-900: #CFD4DA;

  --green-100: #E9FBC2;
  --green-300: #DAF69C;
  --green-500: #C5E384;
  --green-700: #93C723;
  --green-900: #74A900;

  --yellow-100: #FFEFC3;
  --yellow-300: #F6D26F;
  --yellow-500: #F3C853;
  --yellow-700: #E7B01A;
  --yellow-900: #CB9501;

  --orange-100: #FAAE8C;
  --orange-300: #FD9161;
  --orange-500: #FF7538;
  --orange-700: #F35109;
  --orange-900: #D25016;

  --red-100: #FD8D8D;
  --red-300: #FA5959;
  --red-500: #FF4343;
  --red-700: #E32E2E;
  --red-900: #BE1A1A;
}

/*
 * LAYOUT
*/

/* CONTAINERS */
html, body { overflow: hidden; margin: 0; }
body { width: 100vw; height: 100vh; }
@media screen and (max-width: 340px) { html { font-size: 14px; } }
@media screen and (max-width: 390px) { html { font-size: 15px; } }
.container { max-width: 1000px; min-width: 320px; margin-left: auto; margin-right: auto;}

@keyframes slidein-left { from { transform: translate(-100%); } to { transform: translate(0%); } }
@keyframes slidein-right { from { transform: translate(100%); } to { transform: translate(0%); opacity: 1; } }
@keyframes slidein-bottom { from { transform: translate(0, 100%); } to { transform: translate(0, 0%); opacity: 1; } }
@keyframes dim { from { opacity: 0 } to { opacity: 1; } }

/*
 * STYLING
*/
body { font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif; }
a { text-decoration: none; color: var(--blue-500); }
input { border: 1px solid var(--grey-300); border-radius: 0.25rem; padding: 0.45rem; font-size: 1rem; }
.input.small { padding: 0.4rem; font-size: 0.8rem; }
input:focus { border-color: var(--blue-300); outline: 0; }
.input.icon { border-top-left-radius: 0; border-bottom-left-radius: 0; }
.input.icon:focus { border-top-left-radius: 0; border-bottom-left-radius: 0; border-left-color: var(--blue-500); }

select { border: 1px solid var(--grey-300); border-radius: 0.25rem; padding: 0.5rem; font-size: 1rem; }
select.input-small { padding: 0.3rem; }
select:focus { border-color: var(--blue-300); outline: none; }
button, .button {
  height: min-content;
  background-color: var(--grey-100);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  font-size: 1rem;
  text-decoration: none;
  color: black;
}
.button.small { padding: 0rem 0.6rem; }
.button.medium { padding: 0.3rem 0.8rem; }
.button.wide { padding: 0.3rem 2rem; }
button:hover, .button:hover { background-color: var(--grey-300); }
button:focus, .button:focus { border-color: var(--blue-500); outline: none; }
.basic { background-color: white }
.primary { background-color: #2185d0; color: #fff; }
.primary:hover { background-color: #1678c2; }

.button-group > .button { border-radius: 0; margin: 0 }
.button-group > .button:first-child { border-top-left-radius: 0.25rem; border-bottom-left-radius: 0.25rem }
.button-group > .button:last-child { border-top-right-radius: 0.25rem; border-bottom-right-radius: 0.25rem }

.no-select { user-select: none; -webkit-user-select: none; }
.dynamic-shape > .block { transition: height 0.5s, width 0.5s; }
.selected-shape > div { box-shadow: 0 0 0 1px #ffffff, 0 0 0 3px var(--blue-300); }

/*
 * DROPDOWN
*/

.dropdown { position: relative; display: inline-block; }

.dropdown-content {
  display: none;
  position: absolute;
  background-color: var(--grey-100);
  z-index: 5;
  border-radius: 0 0 0.25rem 0.25rem;
}

.dropdown-content a {
  padding: 0.5rem 1rem;
  text-decoration: none;
  display: block;
  cursor: pointer;
  border-radius: 0.25rem;
  text-align: center;
  color: black;
}

.dropdown-content a:hover { background-color: var(--grey-300) }

.dropdown:hover .dropdown-content { display: block; }


/*
 * LOADING SPINNER
*/

.spinner:after {
  content: " ";
  display: block;
  width: 80%;
  height: 80%;
  border-radius: 50%;
  border: 2px solid var(--grey-900);
  border-right-color: transparent;
  animation: rotation 1.2s linear infinite;
}

@keyframes rotation { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }


/*
 * MODAL
*/

.modal {
  position: fixed;
  top: 20%;
  width: min(100vw, 40rem);
  height: min(80vh, 40rem);
  background-color: white;
  z-index: 11;
  animation: slidein-bottom 0.5s;
  border-radius: 5px;
}

.dimmer {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  height: 100%;
  background-color: rgba(0,0,0,0.5);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 10;
  animation: dim 0.5s;
}

